syntax = "proto3";

option csharp_namespace = "GrpcData";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service Chat{
	rpc Chatter(stream ToServerDto)
	returns (stream ToClientDto);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message ToServerDto{
	string text = 1;
}

message ToClientDto{
	string text = 1;
}